# NeuralNetwork

./: CMakeCache.txt  CMakeLists.txt  Makefile  NeuralNetwork  cmake_install.cmake
include/: Layer.hpp  Matrix.hpp  NeuralNetwork.hpp  Neuron.hpp
include/utils/: MatrixToVector.hpp  MultiplyMatrix.hpp
src/: Layer.cpp  Matrix.cpp  NeuralNetwork.cpp  Neuron.cpp  main.cpp
src/utils/: MatrixToVector.cpp  MultiplyMatrix.cpp
